small changes to ourr page content

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Pushkal welcome here</title>
 </head>
 <body>
-<h1> I am happy </h1>
+<h1> I am happy. it's a great day  </h1>
 </body>
 </html>
